--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           massage and hot and cold stone therapy.</p>
       </div>
       <div class="skill-row">
-        <img class="Lazy" src="CSS/images/Lazyday.jpg" alt="Lazy-girl">
+        <img class="Lazy" src="CSS/images/LazyDay.jpg" alt="Lazy-girl">
         <h3>SOME Coding</h3>
         <p>So far I know some coding. Like HTML and CSS and I was going to head into some Java
           classes but I wanted to make sure I could understand CSS better before I moved completely past
